cmss/main/default/objects/CampaignContentInfo__c/CampaignContentInfo__c.object-meta.xml
<CustomObject>
    <description>Object represents &quot;malé souhlasy&quot;</description>
    <label>CampaignContentInfo</label>
    <nameField>
        <label>CampaignContentInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampaignContentInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>