cmss/main/default/objects/CampaignContentInfo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Klient</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CampaignContentInfos</relationshipLabel>
    <relationshipName>CampaignContentInfos</relationshipName>
    <type>Lookup</type>
</CustomField>