cmss/main/default/objects/CampaignContentInfo__c/fields/CampaignContentType__c.field-meta.xml
<CustomField>
    <fullName>CampaignContentType__c</fullName>
    <description>Typ mkt. obsahu</description>
    <label>CampaignContentType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>