cmss/main/default/objects/CampaignContentInfo__c/fields/CampaignContentValue__c.field-meta.xml
<CustomField>
    <fullName>CampaignContentValue__c</fullName>
    <description>Souhlas k typu mkt. obsahu</description>
    <label>CampaignContentValue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>