cmss/main/default/objects/CampaignContentInfo__c/fields/DateInsert__c.field-meta.xml
<CustomField>
    <fullName>DateInsert__c</fullName>
    <description>Datum vytvoření custom</description>
    <label>DateInsert</label>
    <type>DateTime</type>
</CustomField>