cmss/main/default/objects/CampaignContentInfo__c/fields/DateUpdate__c.field-meta.xml
<CustomField>
    <fullName>DateUpdate__c</fullName>
    <description>Datum aktualizace custom</description>
    <label>DateUpdate</label>
    <type>DateTime</type>
</CustomField>