cmss/main/default/objects/CampaignContentInfo__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID mkt. souhlasu - externí klíč</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>