cmss/main/default/objects/CampaignContentInfo__c/fields/ExternalId_c__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_c__c</fullName>
    <description>ID mkt. souhlasu - externí klíč</description>
    <label>ExternalId__c</label>
    <length>25</length>
    <type>Text</type>
</CustomField>