cmss/main/default/objects/CampaignContentInfo__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CampaignContentInfos</relationshipLabel>
    <relationshipName>CampaignContentInfos</relationshipName>
    <type>Lookup</type>
</CustomField>