cmss/main/default/objects/CampaignContentInfo__c/fields/OperatorInsert__c.field-meta.xml
<CustomField>
    <fullName>OperatorInsert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OperatorInsert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignContentInfos</relationshipName>
    <type>Lookup</type>
</CustomField>