cmss/main/default/objects/CampaignContentInfo__c/fields/OperatorUpdate__c.field-meta.xml
<CustomField>
    <fullName>OperatorUpdate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aktualizoval</description>
    <label>Operator Update</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignContentInfos1</relationshipName>
    <type>Lookup</type>
</CustomField>