cmss/main/default/objects/CampaignContentInfo__c/fields/UsedChannel__c.field-meta.xml
<CustomField>
    <fullName>UsedChannel__c</fullName>
    <description>Distribuční kanál</description>
    <label>UsedChannel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>Dopis</fullName>
            </value>
            <value>
                <fullName>El. portaly a mob. aplikace</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Telefon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>